# MachineLearning

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  Marsroboter-Weka_ordered.csv  k_mean.cpp
lab2/: CMakeLists.txt  Fahrradkurier.csv  dbscan.cpp
lab3/: CMakeLists.txt  lab3_hmm.cpp  lab3_naiveBayes.cpp  queryset.csv  trainingset.csv
lab4/: CMakeLists.txt  lab4_regression.cpp  regression_dataset.csv
